<?xml version="1.0"?>
<package format="2">
  <name>common_include</name>
  <version>0.0.1</version>
  <description>Common include files</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
